--- a/index.html
+++ b/index.html
@@ -1,59 +1,70 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>lustfulite | Discord Bot</title>
-<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <meta charset="utf-8" />
+    <title>Panel</title>
 
-  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="css/style.css">
-
-  </head>
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="./css/main.css">
+</head>
 
 <body>
-
-<div class="container d-flex flex-column">
-  <div class="header d-flex flex-column justify-content-between align-items-center">
-    <nav class="topmenu d-flex justify-content-center"><a href="#about">About</a>
-      <div class="line align-self-center"></div><a href="https://www.lustfulite.ga/Premium">Premium</a>
-      <div class="line align-self-center"></div><a href="https://www.lustfulite.ga/support">Join</a>
-      <div class="line align-self-center"></div><a href="https://www.lustfulite.ga/Staff">Staff</a>
-    </nav>
-    <div class="server-info d-flex align-items-center flex-column text-center">
-      <h1>Lustfulite</h1><a class="links-suppressor join-btn btn-pill white" href="https://discordapp.com/oauth2/authorize?client_id=469176480048349206&scope=bot&permissions=8">Invite Bot</a>
-    </div>
-  </div>
-  <div class="inner d-flex flex-column">
-    <section class="d-flex justify-content-between flex-lg-nowrap flex-wrap" id="about">
-      <div class="image image1" style="flex-grow: 1;"></div>
-      <div class="text">
-        <h2>About Lust</h2>
-        <p><b>Lustfulite</b>&nbsp;Is a multipurpose Discord bot Equipped with many commands from economy to moderation And its still being worked on so look foward to more FUN commands :)
-        <ul>
-          <li></li>
-          <li>Moderation features </li>
-          <li>Currency </li>
-          <li> Information commands</li>
-          <li>Image Manipulation</li>
-          <li>And many more useful commands!</li>
-        </ul>
-      </div>
-   
-   
-      <p>
-<html>
-   <body>
-      <form>
-      <input type="button" value="Result" onclick="display()"/>
-      </form>
-      <script src="new.js">
-      </script>
-   </body>
-</html>
-
+    <table class="content">
+        <tr class="top">
+            <td class="small">
+                <div>
+                    <p class='border header'><img src='http://cdn.onlinewebfonts.com/svg/img_7412.png' class="fasIMG invert"> Last Messages</p>
+                    <div id="lastMessages" class="scrollable"></div>
+                    <button id="clearChat">♻ Clear Last Messages Section</button>
+                    <select id="guilds"></select><br>
+                    <select id="channels"></select><br>
+                    <textarea class='send' id="toSend" placeholder="Write the content of your message"></textarea><br>
+                    <button id="send" class="blue">↩ Send</button>
+                    <button id="delLast" class="red">🗓 Delete Last Message</button>
+                </div>
+            </td>
+            <td class="small">
+                <div>
+                    <p id='guildName' class="border header"><img src="https://image.flaticon.com/icons/png/512/36/36773.png" class="fasIMG invert"> Informations</p>
+                    <div id="guildInfo" class="scrollable"></div>
+                    <button id='leaveGuild' class="red">🚪 Leave Guild</button><br>
+                    <button id='invite' class="blue">✉ Invite</button><br><br>
+                </div>
+                <div>
+                    <fieldset>
+                        <legend>Auto-Scroll</legend>
+                        <label class="switch">
+                            <input id="chk1" type="checkbox" value="last">
+                            <span class="slider round"></span>
+                        </label>
+                        <label for="last">Last Messages</label><br /><br />
+                        <label class="switch">
+                            <input id="chk2" type="checkbox" value="chatCheck" checked>
+                            <span class="slider round"></span>
+                        </label>
+                        <label id='channelNameLabel' for="chatCheck">Chat</label><br /><br />
+                        <label class="switch">
+                            <input id="chk3" type="checkbox" value="animCheck" checked>
+                            <span class="slider round"></span>
+                        </label>
+                        <label for="animCheck">Enable auto-scrolling animation</label><br /><br />
+                    </fieldset>
+                </div>
+            </td>
+            <td class="big">
+                <div>
+                    <p id='channelName' class="border header"><img src='https://static.thenounproject.com/png/332789-200.png' class="fasIMG invert"> Chat</p>
+                    <div id="chat" class="scrollable"></div>
+                    <button id='refreshToken' class="red demi">🔑 Edit token</button><button id="btnrRefreshChat" class="demi">🔁 Refresh Chat</button>
+                </div>
+            </td>
+        </tr>
+    </table>
 </body>
 
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript" src="./js/discord.11.4.2.js"></script>
+<script type="text/javascript" src="./js/main.js"></script>
+<script type="text/javascript" src="./js/panel.js"></script>
 </html>
