--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>lustfulite | Discord Bot</title>
+  <title>Giveaway paradise | Free Nitro</title>
 <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
@@ -18,10 +18,9 @@
 <div class="container d-flex flex-column">
   <div class="header d-flex flex-column justify-content-between align-items-center">
     <nav class="topmenu d-flex justify-content-center"><a href="#about">About</a>
-      <div class="line align-self-center"></div><a href="https://www.lustfulite.ga/Premium">Premium</a>
       <div class="line align-self-center"></div><a href="https://www.lustfulite.ga/support">Join</a>
-      <div class="line align-self-center"></div><a href="https://www.lustfulite.ga/Staff">Staff</a>
-      <div class="line align-self-center"></div><a href="https://www.lustfulite.ga/dash">DashBoard</a>
+      
+      
     </nav>
     <div class="server-info d-flex align-items-center flex-column text-center">
       <h1>Lustfulite</h1><a class="links-suppressor join-btn btn-pill white" href="https://discordapp.com/oauth2/authorize?client_id=469176480048349206&scope=bot&permissions=8">Invite Bot</a>
@@ -32,14 +31,14 @@
       <div class="image image1" style="flex-grow: 1;"></div>
       <div class="text">
         <h2>About Lust</h2>
-        <p><b>Lustfulite</b>&nbsp;Is a multipurpose Discord bot Equipped with many commands from economy to moderation And its still being worked on so look foward to more FUN commands :)
+        <p><b>Giveaway paradise</b>&nbsp;Is a multipurpose Discord Server created for 1 reason to make its users happy by providing nitro to them
         <ul>
           <li></li>
-          <li>Moderation features </li>
-          <li>Currency </li>
-          <li> Information commands</li>
-          <li>Image Manipulation</li>
-          <li>And many more useful commands!</li>
+          <li>Nitro Giveaways</li>
+          <li>Random drops </li>
+          <li>Great users/staff</li>
+          <li>Fun bots</li>
+          <li>And many more useful and fun things!</li>
         </ul>
       </div>
    <!-- https://github.com/mistermantas/hop-on-discord -->
@@ -81,7 +80,7 @@ for (var i = 0; i < elements.length; i++) {
   </div>
 
   <div class="discord-dialog__footer">
-    <a href="https://discord.gg/mn9madS" class="discord-dialog__btn">Join the server now</a>
+    <a href="https://discord.gg/yeKqNPW" class="discord-dialog__btn">Join the server now</a>
   </div>
 </div>
 <!-- END -->
