--- a/extra.html
+++ b/extra.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>lustfulite | Discord Bot</title>
+  <title>Giveaway paradise</title>
 <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
@@ -17,13 +17,12 @@
     <section class="d-flex justify-content-between flex-lg-nowrap flex-wrap" id="about">
       <div class="image image1" style="flex-grow: 1;"></div>
       <div class="text">
-        <h2>Premium</h2>
-        <p><b>Lustfulite</b>&nbsp;Has a Premium System but Its currently Private.But when it is Put Out for everyone you can expect
-        <ul>
-          <li>Custom commands For anyone who has The premium role and perks</li>
-          <li>Extra Currency commands</li>
-          <li>100% Free (Can be givin randomly)</li>
-          <li>More is being thought of</li>
+       <h2>Why did we create Giveaway Paradise</h2>
+<p>&nbsp;We started this server in hope of bringing joy to our users while also having a great time with them so we often do nitro giveaways to show how much we care and love them.</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>While We do offer nitro codes we are also busy so delivery will not be as fast as everyother time we also ask that you do not dm us asking for nitro as this is very annoying.</p>
         </ul>
       </div>
     <p>
