--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="container d-flex flex-column">
   <div class="header d-flex flex-column justify-content-between align-items-center">
     <nav class="topmenu d-flex justify-content-center"><a href="#about">About</a>
-    <nav class="topmenu d-flex justify-content-center"><a href="#about">Extra</a>
+    <nav class="topmenu d-flex justify-content-center"><a href="#extra">Extra</a>
       <div class="line align-self-center"></div><a href="https://www.lustfulite.ga/support">Join</a>
       
       
