--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="header d-flex flex-column justify-content-between align-items-center">
     <nav class="topmenu d-flex justify-content-center"><a href="#about">About</a>
       <div class="line align-self-center"></div><a href="https://discord.gg/yeKqNPW">Join</a>
-      <div class="line align-self-center"></div><a href="#extra">Extra</a>
+      <div class="line align-self-center"></div><a href="extra">Extra</a>
       
       
     </nav>
