--- a/extra.html
+++ b/extra.html
@@ -1,24 +1,33 @@
-<p style="text-align: center;">&nbsp;</p>
-<p> </p>
-<div class="container d-flex flex-column">
-<div class="header d-flex flex-column justify-content-between align-items-center"><nav class="topmenu d-flex justify-content-center"><a href="#about">&nbsp;About</a>
-<div class="line align-self-center" style="text-align: center;">&nbsp;</div>
-<a href="https://discord.gg/yeKqNPW">Join</a>
-<div class="line align-self-center" style="text-align: center;">&nbsp;</div>
-<a href="extra">Extra</a>
-<div class="inner d-flex flex-column">
-<section id="about" class="d-flex justify-content-between flex-lg-nowrap flex-wrap">
-<div class="image image1" style="flex-grow: 1; text-align: center;">&nbsp;</div>
-<div class="text" style="text-align: center;">
-<h2>Why did we create Giveaway Paradise</h2>
-<p>&nbsp;We started this server in hope of bringing joy to our users while also having a great time with them so we often do nitro giveaways to show how much we care and love them.</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+<!DOCTYPE html>
+<html lang="en" >
+
+<head>
+  <meta charset="UTF-8">
+  <title>Giveaway paradise</title>
+<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
+
+      <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+  <div class="inner d-flex flex-column">
+    <section class="d-flex justify-content-between flex-lg-nowrap flex-wrap" id="about">
+      <div class="image image1" style="flex-grow: 1;"></div>
+      <div class="text">
+       <h2>Why did we create Giveaway Paradise</h2>
+                    <p>&nbsp;We started this server in hope of bringing joy to our users while also having a great time with them so we often do nitro giveaways to show how much we care and love them.</p>
+                    <p>&nbsp;</p>
+                    <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>While We do offer nitro codes we are also busy so delivery will not be as fast as everyother time we also ask that you do not dm us asking for nitro as this is very annoying.</p>
-</div>
-<p style="text-align: center;">&nbsp;</p>
-</section>
-</div>
-</nav></div>
-</div>
+        </ul>
+      </div>
+    <p>
+
+
+</body>
+
+</html>
