--- a/extra.html
+++ b/extra.html
@@ -12,7 +12,12 @@
       <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+           <div class="container d-flex flex-column">
+  <div class="header d-flex flex-column justify-content-between align-items-center">
+    <nav class="topmenu d-flex justify-content-center"><a href="#about">About</a>
+      <div class="line align-self-center"></div><a href="https://discord.gg/yeKqNPW">Join</a>
+      <div class="line align-self-center"></div><a href="extra">Extra</a>
+      
   <div class="inner d-flex flex-column">
     <section class="d-flex justify-content-between flex-lg-nowrap flex-wrap" id="about">
       <div class="image image1" style="flex-grow: 1;"></div>
