--- a/extra.html
+++ b/extra.html
@@ -18,6 +18,8 @@
       <div class="line align-self-center"></div><a href="https://discord.gg/yeKqNPW">Join</a>
       <div class="line align-self-center"></div><a href="extra">Extra</a>
       
+  </nav>
+      
   <div class="inner d-flex flex-column">
     <section class="d-flex justify-content-between flex-lg-nowrap flex-wrap" id="about">
       <div class="image image1" style="flex-grow: 1;"></div>
