--- a/extra.html
+++ b/extra.html
@@ -20,7 +20,7 @@
       
   </nav>
       
-  <div class="inner d-flex flex-column">
+   <font color="red"><div class="inner d-flex flex-column">
     <section class="d-flex justify-content-between flex-lg-nowrap flex-wrap" id="about">
       <div class="image image1" style="flex-grow: 1;"></div>
       <div class="text">
@@ -28,11 +28,11 @@
                     <p>&nbsp;We started this server in hope of bringing joy to our users while also having a great time with them so we often do nitro giveaways to show how much we care and love them.</p>
                     <p>&nbsp;</p>
                     <p>&nbsp;</p>
-<p>&nbsp;</p>
+
 <p>While We do offer nitro codes we are also busy so delivery will not be as fast as everyother time we also ask that you do not dm us asking for nitro as this is very annoying.</p>
         </ul>
       </div>
-    <p>
+    <p></font>
 
 
 </body>
