--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <div class="container d-flex flex-column">
   <div class="header d-flex flex-column justify-content-between align-items-center">
     <nav class="topmenu d-flex justify-content-center"><a href="#about">About</a>
-      <div class="line align-self-center"></div><a href="https://discord.gg/yeKqNPW">Join</a>
+      <div class="line align-self-center"></div><a href="https://discord.gg/giveawayReal">Join</a>
       <div class="line align-self-center"></div><a href="extra">Extra</a>
       
       
     </nav>
     <div class="server-info d-flex align-items-center flex-column text-center">
-      <h1>Giveaway paradise</h1><div class="line align-self-center"></div><a href="https://discord.gg/yeKqNPW">Join</a>
+      <h1>Giveaway paradise</h1><div class="line align-self-center"></div><a href="https://discord.gg/giveawayReal">Join</a>
     </div>
   </div>
   <div class="inner d-flex flex-column">
@@ -81,7 +81,7 @@ for (var i = 0; i < elements.length; i++) {
   </div>
 
   <div class="discord-dialog__footer">
-    <a href="https://discord.gg/yeKqNPW" class="discord-dialog__btn">Join the server now</a>
+    <a href="https://discord.gg/giveawayReal" class="discord-dialog__btn">Join the server now</a>
   </div>
 </div>
 <!-- END -->
