--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <nav class="topmenu d-flex justify-content-center"><a href="#about">About</a>
       <div class="line align-self-center"></div><a href="https://discord.gg/giveawayReal">Join</a>
       <div class="line align-self-center"></div><a href="extra">Extra</a>
+      <div class="line align-self-center"></div><a href="bot">Our Bot</a>
       
       
     </nav>
