--- a/extra.html
+++ b/extra.html
@@ -17,6 +17,7 @@
     <nav class="topmenu d-flex justify-content-center"><a href="#about">About</a>
       <div class="line align-self-center"></div><a href="https://discord.gg/giveawayReal">Join</a>
       <div class="line align-self-center"></div><a href="extra">Extra</a>
+      <div class="line align-self-center"></div><a href="bot">Our bot</a>
       
   </nav>
       
