--- a/bot.html
+++ b/bot.html
@@ -25,14 +25,15 @@
       
     </nav>
     <div class="server-info d-flex align-items-center flex-column text-center">
-      <h1>Giveaway paradise</h1><div class="line align-self-center"></div><a href="https://discord.gg/giveawayReal">Join</a>
+      <h1>Giveaway paradise</h1>
+      <div class="line align-self-center"></div><a href="https://discordapp.com/oauth2/authorize?client_id=594247033615810736&permissions=8">Invite the bot</a>
     </div>
   </div>
   <div class="inner d-flex flex-column">
     <section class="d-flex justify-content-between flex-lg-nowrap flex-wrap" id="about">
       <div class="image image1" style="flex-grow: 1;"></div>
       <div class="text">
-        <h2>About Us</h2>
+        <h2>About The bot</h2>
         <p><b>Our Bot</b>&nbsp;Is a Moderation Purposed Discord bot created to keep the server safe
         <ul>
           <li>It has</li>
