--- a/bot.html
+++ b/bot.html
@@ -17,7 +17,7 @@
 
 <div class="container d-flex flex-column">
   <div class="header d-flex flex-column justify-content-between align-items-center">
-    <nav class="topmenu d-flex justify-content-center"><a href="About">About</a>
+    <nav class="topmenu d-flex justify-content-center"><a href="index">About</a>
       <div class="line align-self-center"></div><a href="https://discord.gg/giveawayReal">Join</a>
       <div class="line align-self-center"></div><a href="extra">Extra</a>
       <div class="line align-self-center"></div><a href="bot">Our Bot</a>
